# Formatting-XML

./: CMakeLists.txt  CMakeLists.txt.user.98b417a  Graphs1.cpp  Nodes_Tree.cpp  Nodes_Tree.h  README.md  Resources.qrc  XML_FileConsistency.cpp  XML_Formater.cpp  XML_Formater.h  XML_JSON.cpp  XML_JSON.h  compress.cpp  compress.h  compress.ui  consistency.cpp  consistency.h  consistency.ui  consistfunction.cpp  consistfunction.h  dockwidget.ui  formatting.cpp  formatting.h  formatting.ui  graph.cpp  graph.h  graph.ui  graphs1.h  main.cpp  mainHeader.h  mainclass.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  testdialog.cpp  testdialog.h  testdialog.ui  (+5 more)
new/: CMakeCache.txt
